# tickets-distribution

./: Cargo.toml  README.md
async-tickets-distribution/: Cargo.toml
async-tickets-distribution/src/: main.rs  menu.rs
udp_ticket_distribution/: Cargo.toml
udp_ticket_distribution/src/: distr.rs  lib.rs  pass.rs
udp_tools/: Cargo.toml
udp_tools/src/: lib.rs
udp_tools/src/tool_udphelper/: clientside.rs  mod.rs  serverside.rs
udp_tools/src/tool_udppacket/: mod.rs  tool_packetdata.rs
