[package]
name = "async-tickets-distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.0"
tokio = {version = "1.23.0", features = ["full"] }
udp_ticket_distribution = { version = "0.1.0", path = "../udp_ticket_distribution" }
