[package]
name = "udp_ticket_distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.24.1", features = ["full"] }
udp_tools = { version = "0.1.0", path = "../udp_tools" }
