[package]
name = "udp_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_cbor = "0.11.2"
serde_repr = "0.1.10"
tokio = { version = "1.23.0", features = ["full"] }
